--- a/output/team.html
+++ b/output/team.html
@@ -18,6 +18,7 @@
     <div class="card" style="width: 18rem;">
     <div class="card-body">
       <h5 class="card-title">Michael Scott</h5>
+      <i class="fas fa-user-tie fa-3x"></i>
       <p class="card-text">Manager</p>
     </div>
     <ul class="list-group list-group-flush">
@@ -29,6 +30,7 @@
     <div class="card" style="width: 18rem;">
     <div class="card-body">
       <h5 class="card-title">Dwight Schrute</h5>
+      <i class="fas fa-user-astronaut fa-3x"></i>
       <p class="card-text">Engineer</p>
     </div>
     <ul class="list-group list-group-flush">
@@ -40,6 +42,7 @@
     <div class="card" style="width: 18rem;">
     <div class="card-body">
       <h5 class="card-title">Jim Halpert</h5>
+      <i class="fas fa-user-astronaut fa-3x"></i>
       <p class="card-text">Engineer</p>
     </div>
     <ul class="list-group list-group-flush">
@@ -51,6 +54,7 @@
     <div class="card" style="width: 18rem;">
     <div class="card-body">
       <h5 class="card-title">Creed Bratton</h5>
+      <i class="fas fa-user-graduate fa-3x"></i>
       <p class="card-text">Intern</p>
     </div>
     <ul class="list-group list-group-flush">
